--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <ul>
     <a href="minestrone.html">Minestrone</a>
+     <br>
     <a href="garliccroutons.html">Garlic Croutons</a>
+     <br>
+    <a href="stickytoffee.html">Sticky Toffee</a>
+    </ul>
 </body>
 </html>
